# rustyWings

./: LICENSE.md  README.md  vercel.json
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  lib.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/optimizer/: Cargo.toml
libs/optimizer/src/: analyze.rs  common.rs  main.rs  simulate.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
www/: index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
www/app/: terminal.js
www/pkg/: lib_simulation_wasm.d.ts  lib_simulation_wasm.js  lib_simulation_wasm_bg.js  lib_simulation_wasm_bg.wasm  lib_simulation_wasm_bg.wasm.d.ts  package.json
