[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
rand = "0.8.5"
lib-simulation = {path = "../simulation"}
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = "0.3.69"

[dev-dependencies]
rand_chacha = "0.3.1"
